<resources>
    <string name="app_name">知乎日报</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">设置选项</string>
    <string name="action_notification">活动通知</string>
    <string name="action_dark_mode_dark">夜间模式</string>
    <string name="action_theme_add">添加关注</string>
    <string name="title_activity_login">登录</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_settings">设置</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="preferences_category_general">常规</string>
    <string name="preferences_category_other">其他</string>
    <string name="preferences_auto_offline">自动离线下载</string>
    <string name="preferences_no_image_mode">无图模式</string>
    <string name="preferences_bit_font_mode">大号字</string>
    <string name="preferences_push">推送消息</string>
    <string name="preferences_comment_share">点评分享到微博</string>
    <string name="preferences_cache_clear">清楚缓存</string>
    <string name="preferences_app_check">检查更新</string>
    <string name="preferences_feedback">意见反馈</string>
    <string name="preferences_auto_offline_prompt">仅 Wi-Fi 下可用，自动下载最新内容</string>
    <string name="preferences_category_feedback">反馈</string>
    <string name="preference_key_app_check">key_app_check</string>
    <string name="preference_key_app_upgrade_reminder">key_app_upgrade_reminder</string>
    <string name="preference_key_auto_offline_open">key_auto_offline_open</string>
    <string name="preference_key_big_font_mode_open">key_big_font_mode_open</string>
    <string name="preference_key_cache_clear">key_cache_clear</string>
    <string name="preference_key_comment_share_open">key_comment_share_open</string>
    <string name="preference_key_dark_mode_open">key_dark_mode_open</string>
    <string name="preference_key_feedback">key_feedback</string>
    <string name="preference_key_guide_is_viewed">key_guide_is_viewed</string>
    <string name="preference_key_last_cache_time">key_last_cache_time</string>
    <string name="preference_key_last_offline_time">key_last_offline_time</string>
    <string name="preference_key_no_image_mode_open">key_no_image_mode_open</string>
    <string name="preference_key_push_open">key_push_open</string>
    <string name="preference_key_recommendation_reminder">key_recommendation_reminder</string>
    <string name="preference_key_shake_to_dark_mode_open">key_shake_to_dark_mode_open</string>
    <string name="preference_key_test_server">key_test_server</string>
    <string name="preferences_no_image_mode_prompt">2G/3G 网络下不下载图片</string>
</resources>
